regression/parse_pool/progtest10.sfp.out

sfc in program parse_pool/progtest10.sfp
syntax error at line 5, position 1:
any goto foo when bar
^
